objects/Server_Deployment__c/Server_Deployment__c.object-meta.xml
<CustomObject>
    <description>The Server Deployment Object tracks important technical characteristics about a Production, Test, QA, or Evaluation deployment to provide the support team background information when responding to requests for assistance as well as to gather metrics for Product Management to understand typical configuration and usage.  The object includes two additional Objects--the Client and Zone Server.

2014 | JR</description>
    <label>Server Deployment</label>
    <nameField>
        <label>Instance/Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Server Deployments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>