objects/Server_Deployment__c/fields/Airgapped__c.field-meta.xml
<CustomField>
    <fullName>Airgapped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this environment airgapped?</description>
    <label>Airgapped</label>
    <type>Checkbox</type>
</CustomField>