objects/Server_Deployment__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <inlineHelpText>Select the respective software brand deployed to the target server:  Tanium or McAfee Real Time Command</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tanium</fullName>
                <default>true</default>
                <label>Tanium</label>
            </value>
            <value>
                <fullName>VMware/Trustpoint</fullName>
            </value>
            <value>
                <fullName>McAfee/RT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>