objects/Server_Deployment__c/fields/Client_OSes__c.field-meta.xml
<CustomField>
    <fullName>Client_OSes__c</fullName>
    <description>2014 | JR:  This field is deprecated

Because the target application server can have clients reporting in from multiple operating systems, this field is deprecated and replaced by the new Client Object which allows a TAM to create a separate entry for each managed OS reporting to a server.

AP 1/20/2023: Removing the help text directing users to the related object. Jira SS-2405.</description>
    <inlineHelpText>Client&apos;s OS&apos;es deployed.</inlineHelpText>
    <label>Client OSes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
            <value>
                <fullName>Red Hat</fullName>
            </value>
            <value>
                <fullName>Debian/Ubuntu</fullName>
            </value>
            <value>
                <fullName>SUSE</fullName>
            </value>
            <value>
                <fullName>Solaris</fullName>
            </value>
            <value>
                <fullName>AIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>