objects/Server_Deployment__c/fields/Client_Version__c.field-meta.xml
<CustomField>
    <fullName>Client_Version__c</fullName>
    <description>2013 | JR:  This field is deprecated

Because the target application server can have clients reporting in from multiple operating systems, this field is deprecated and replaced by the new Client Object which allows a TAM to create a separate entry for each managed OS reporting to a server as well as an entry for each version of the client within a specific OS.

AP 1/20/2023: Removing the help text directing users to the related object. Jira SS-2405.</description>
    <inlineHelpText>Client&apos;s server version(s)</inlineHelpText>
    <label>Client Version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>