objects/Server_Deployment__c/fields/Cloud_Migration_Age__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration_Age__c</fullName>
    <formula>IF(ISBLANK(Cloud_Migration_End_Date__c),TODAY() - Cloud_Migration_Start_Date__c,Cloud_Migration_End_Date__c - Cloud_Migration_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Migration Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>