objects/Server_Deployment__c/fields/Cloud_Migration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration_End_Date__c</fullName>
    <label>Cloud Migration End Date</label>
    <type>Date</type>
</CustomField>