objects/Server_Deployment__c/fields/Cloud_Migration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration_Notes__c</fullName>
    <description>Field will be used for comment and latest status</description>
    <label>Cloud Migration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>