objects/Server_Deployment__c/fields/Cloud_Migration_Percent_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration_Percent_Deployed__c</fullName>
    <description>Field will be used to track % of deployed Tanium Cloud licensed endpoints</description>
    <label>Cloud Migration % Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>