objects/Server_Deployment__c/fields/Cloud_Migration_Resource__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field will be used to track person (i.e. ESO) assigned to Tanium Cloud Server</description>
    <label>Cloud Migration Technical Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>