objects/Server_Deployment__c/fields/Cloud_Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration_Status__c</fullName>
    <defaultValue>(&quot;Not Migrating&quot;)</defaultValue>
    <description>Track status of project</description>
    <label>Cloud Migration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Not Migrating</fullName>
                <default>true</default>
                <label>Not Migrating</label>
            </value>
            <value>
                <fullName>Configuration Migration Complete</fullName>
            </value>
            <value>
                <fullName>Client Migration Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>