objects/Server_Deployment__c/fields/Cloud_Migration_Tools__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Migration_Tools__c</fullName>
    <description>Field will be used to track tools used as part of Tanium Cloud Server migration (i.e. CableCar, TaaSinator, Migr8)</description>
    <label>Cloud Migration Tools</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CableCar</fullName>
            </value>
            <value>
                <fullName>ClientMigrate</fullName>
            </value>
            <value>
                <fullName>Migr8</fullName>
            </value>
            <value>
                <fullName>TaaSinator</fullName>
            </value>
            <value>
                <fullName>Other (please comment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>