objects/Server_Deployment__c/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <description>SS-4495 - Field to capture the cloud provider.
ITSC-00291940 - Field to default to blank and only OrderOps (use Deal Desk profile) can update it.</description>
    <inlineHelpText>This field should be blank - it can only be updated by Order Ops for initial tenant builds. It&apos;s only editable by order ops and it overrides the cloud provider that Provisioner defaults to (via license file), for when deals come through a given cloud marketplace.</inlineHelpText>
    <label>Cloud Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>