objects/Server_Deployment__c/fields/Cloud_Region__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Region__c</fullName>
    <description>SS-8288 - New cloud region field for Provisioner.</description>
    <inlineHelpText>Cloud regions:
us - United States
jp - Japan
au - Australia
ca - Canada
gov - United States
eu - European Union
uk - United Kingdom
sa - South America</inlineHelpText>
    <label>Cloud Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>us</fullName>
                <label>us (United States)</label>
            </value>
            <value>
                <fullName>jp</fullName>
                <label>jp (Japan)</label>
            </value>
            <value>
                <fullName>au</fullName>
                <label>au (Australia)</label>
            </value>
            <value>
                <fullName>ca</fullName>
                <label>ca (Canada)</label>
            </value>
            <value>
                <fullName>gov</fullName>
                <label>gov (United States)</label>
            </value>
            <value>
                <fullName>eu</fullName>
                <label>eu (European Union)</label>
            </value>
            <value>
                <fullName>uk</fullName>
                <label>uk (United Kingdom)</label>
            </value>
            <value>
                <fullName>sa</fullName>
                <label>sa (South America)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>