objects/Server_Deployment__c/fields/Compliance_Framework__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Framework__c</fullName>
    <description>SS-2739 - Note that picklist values need to be lower case to feed correctly to the Provisioner application.</description>
    <inlineHelpText>Choose &quot;None&quot; for all customers unless there are explicit instructions to select tc_usg (Government) or protected_b (Canadian) compliance.</inlineHelpText>
    <label>Compliance Framework</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>tc_usg</fullName>
            </value>
            <value>
                <fullName>protected_b</fullName>
            </value>
            <value>
                <fullName>tc</fullName>
                <isActive>false</isActive>
                <label>tc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>