objects/Server_Deployment__c/fields/Configured_in_Active_Active_Array__c.field-meta.xml
<CustomField>
    <fullName>Configured_in_Active_Active_Array__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2014-10-14 | JR  
Added field to track customers/prospects who have configured their Server Deployment in an Active/Active Array</description>
    <inlineHelpText>Select the checkbox control if the application server is configured in an Active/Active array.</inlineHelpText>
    <label>Configured in Active/Active Array</label>
    <type>Checkbox</type>
</CustomField>