objects/Server_Deployment__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Country the Server Deployment is installed in.</description>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country_For_Export__c.No_Business__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_For_Export__c</referenceTo>
    <relationshipLabel>Server Deployments</relationshipLabel>
    <relationshipName>Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>