objects/Server_Deployment__c/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <description>The location (remote vs local) of the SQL Server.</description>
    <inlineHelpText>Select &quot;Local&quot; if the application server and database instance are installed to the same device.  Choose &quot;Remote&quot; if the database instance is running on a different device from the application server.</inlineHelpText>
    <label>Database Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>