objects/Server_Deployment__c/fields/Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date__c</fullName>
    <inlineHelpText>Set to date of initial install of the application server.</inlineHelpText>
    <label>Deployment Date</label>
    <type>Date</type>
</CustomField>