objects/Server_Deployment__c/fields/Domain_Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Domain_Exception_Reason__c</fullName>
    <description>Field used to capture justification for a mismatch between delivery email domain and the domain on the account for rev rec purposes.</description>
    <inlineHelpText>Field used to capture justification for a mismatch between delivery email domain and the domain on the account for rev rec purposes. Exceptions should be for rare cases only (ie. delivering license to an affiliate account).</inlineHelpText>
    <label>Domain Exception Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>