objects/Server_Deployment__c/fields/Exclude_from_Cloud_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Cloud_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AP 8/15/2023 - ITSC-00212800: Field that will allow the Customer Org to exclude specific Server Deployment records from generating Support related alerts.</description>
    <inlineHelpText>Field that will allow the Customer Org to exclude specific Server Deployment records from generating Support related alerts.</inlineHelpText>
    <label>Exclude from Cloud Alerts</label>
    <type>Checkbox</type>
</CustomField>