objects/Server_Deployment__c/fields/Exempt_from_TPAN_Upload__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_TPAN_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ITSC-00147634</description>
    <inlineHelpText>Flag to indicate whether a particular customer is exempt from the requirement to upload TPAN files.</inlineHelpText>
    <label>Exempt from TPAN Upload</label>
    <type>Checkbox</type>
</CustomField>