objects/Server_Deployment__c/fields/First_Platform_Login__c.field-meta.xml
<CustomField>
    <fullName>First_Platform_Login__c</fullName>
    <description>DET-173 Telemetry fields. These values originate from the User Analytics platform, are ingested into Snowflake and pushed to Salesforce via Workato.</description>
    <inlineHelpText>The first time the customer logged into the Tanium Cloud platform as measured by the User Analytics tool for Tanium Cloud.</inlineHelpText>
    <label>First Platform Login</label>
    <type>Date</type>
</CustomField>