objects/Server_Deployment__c/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <description>2014 | JIR:  This field is deprecated

Notes and attachments associated with this Server deployment should be attached within the &quot;Notes and Attachments&quot; of the Server Deployment record or the Opportunity record.</description>
    <label>General Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>