objects/Server_Deployment__c/fields/IC_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>IC_Load_Date__c</fullName>
    <inlineHelpText>Set to date of Initial Content (IC) load.  If a new version of the IC is imported, reset this date accordingly.</inlineHelpText>
    <label>IC Load Date (Delete Me)</label>
    <type>Date</type>
</CustomField>