objects/Server_Deployment__c/fields/Is_Titankube_Integration_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Titankube_Integration_Required__c</fullName>
    <description>SS-4740 - New field to indicate whether Titankube integration is required (On Prem only).</description>
    <inlineHelpText>This field should only be used if the license requires TitanKube configurations. If this deployment is NOT related to TitanKube, then please leave the default value of ‘No’.</inlineHelpText>
    <label>Is Titankube Integration Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>