objects/Server_Deployment__c/fields/Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_Date__c</fullName>
    <description>The date that the last usage data was pulled from the User Analytics platform for Tanium Cloud customers.</description>
    <inlineHelpText>The date that the last usage data was pulled from the User Analytics platform for Tanium Cloud customers.</inlineHelpText>
    <label>Last Refresh Date</label>
    <type>Date</type>
</CustomField>