objects/Server_Deployment__c/fields/Last_TPAN_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_TPAN_Upload_Date__c</fullName>
    <label>Last TPAN Upload Date</label>
    <type>DateTime</type>
</CustomField>