objects/Server_Deployment__c/fields/License_delivery_email_primary__c.field-meta.xml
<CustomField>
    <fullName>License_delivery_email_primary__c</fullName>
    <description>License delivery email (primary)
2020-08-25 Updated Help Text Case 53642</description>
    <inlineHelpText>Must be a customer email.</inlineHelpText>
    <label>License delivery email (primary)</label>
    <type>Email</type>
</CustomField>