objects/Server_Deployment__c/fields/License_delivery_email_tertiary__c.field-meta.xml
<CustomField>
    <fullName>License_delivery_email_tertiary__c</fullName>
    <description>SS-1008: Server Deployment Field Addition</description>
    <inlineHelpText>Additional License Delivery Emails to be entered separated by semicolon &apos;;&apos;.</inlineHelpText>
    <label>License delivery email (tertiary)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>