objects/Server_Deployment__c/fields/License_Generated_DateTime__c.field-meta.xml
<CustomField>
    <fullName>License_Generated_DateTime__c</fullName>
    <description>License Generated DateTime</description>
    <label>License Generated DateTime</label>
    <type>DateTime</type>
</CustomField>