objects/Server_Deployment__c/fields/License_Notes__c.field-meta.xml
<CustomField>
    <fullName>License_Notes__c</fullName>
    <description>Notes that will be populated on the Server Deployment record for Licensing.

1.31.2025 Increased Length to 20,000, per Angela Pearce. TJ</description>
    <inlineHelpText>Notes that will be populated on the Server Deployment record for Licensing.</inlineHelpText>
    <label>License Notes</label>
    <length>2100</length>
    <type>LongTextArea</type>
</CustomField>