objects/Server_Deployment__c/fields/Licensed_Modules__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Modules__c</fullName>
    <description>Modules that are licensed against the server deployment record.</description>
    <inlineHelpText>Modules that are licensed against the server deployment record.</inlineHelpText>
    <label>Licensed Modules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>