objects/Server_Deployment__c/fields/MSSP_End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>MSSP_End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required if the opportunity linked to the Opportunity Server Deployment is an MSSP Deal.</description>
    <label>MSSP End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Server Deployments (MSSP End User Account)</relationshipLabel>
    <relationshipName>Server_Deployments1</relationshipName>
    <type>Lookup</type>
</CustomField>