objects/Server_Deployment__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>2014 | JR
This field is deprecated.  The Opportunity record for the respective account now tracks the TAM Next Step information.</description>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>