objects/Server_Deployment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Server Deployments</relationshipLabel>
    <relationshipName>Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>