objects/Server_Deployment__c/fields/Payload_sent_to_License_Server__c.field-meta.xml
<CustomField>
    <fullName>Payload_sent_to_License_Server__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the Integration Callout record, which stores the details of the payload sent to the License Server</description>
    <inlineHelpText>A link to the Integration Callout record, which stores the details of the payload sent to the License Server</inlineHelpText>
    <label>Payload sent to License Server</label>
    <referenceTo>Integration_Callout__c</referenceTo>
    <relationshipLabel>Server Deployments</relationshipLabel>
    <relationshipName>Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>