objects/Server_Deployment__c/fields/Pod_Leader_KB_Reviewed_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Pod_Leader_KB_Reviewed_Acknowledged__c</fullName>
    <label>Pod Leader: KB Reviewed/Acknowledged</label>
    <type>Date</type>
</CustomField>