objects/Server_Deployment__c/fields/Ring__c.field-meta.xml
<CustomField>
    <fullName>Ring__c</fullName>
    <description>The Ring is a value that designates what level of environment the customer&apos;s Cloud instance is assigned to. GA means that it is &quot;Generally Available&quot; meaning it is a mainstream environment. Other values are used for Beta or limited availability environments.
Business Owner: Jeff Kopp</description>
    <inlineHelpText>The Ring is a value that designates what level of environment the customer&apos;s Cloud instance is assigned to. GA means that it is &quot;Generally Available&quot; meaning it is a mainstream environment. Other values are used for Beta or limited availability environments.</inlineHelpText>
    <label>Ring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>