objects/Server_Deployment__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <description>Most recent Closed Won Opportunity&apos;s Sales Order, set via the Server Deployment Link Subscriptions flow.</description>
    <inlineHelpText>Most recent Closed Won Opportunity&apos;s Sales Order, set via the Server Deployment Link Subscriptions flow.</inlineHelpText>
    <label>Sales Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>