objects/Server_Deployment__c/fields/SAML2_compliant_Identity_Provider__c.field-meta.xml
<CustomField>
    <fullName>SAML2_compliant_Identity_Provider__c</fullName>
    <description>Case 56132 Sophie Xu, Mo Patel:  Move TaaS fields from Opp to Server Deployment</description>
    <label>SAML2-compliant Identity Provider</label>
    <type>TextArea</type>
</CustomField>