objects/Server_Deployment__c/fields/SAR_Version__c.field-meta.xml
<CustomField>
    <fullName>SAR_Version__c</fullName>
    <description>Tanium is launching a Limited Support offering for on-premise customers ONLY, that begins after the end of our Standard Support terms, which are defined against the software versions in our semi-annual release (SAR) bundles. SAR bundles are released every 6 months and have names such as 2024H1, 2024H2, 2025H1, etc.

When an on-premise customer purchases Limited Support, they can only purchase Limited Support against a subset of their endpoints (not their entire enterprise quantity), and it must be pinned to a specific SAR version for the duration of the Limited Support term).
Business Owner: Jeff Kopp</description>
    <inlineHelpText>Tanium is launching a Limited Support offering for on-premise customers ONLY, that begins after the end of our Standard Support terms, which are defined against the software versions in our semi-annual release (SAR) bundles. SAR bundles are released every 6 months and have names such as 2024H1, 2024H2, 2025H1, etc.</inlineHelpText>
    <label>SAR Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024H1</fullName>
            </value>
            <value>
                <fullName>2024H2</fullName>
            </value>
            <value>
                <fullName>2025H1</fullName>
            </value>
            <value>
                <fullName>2025H2</fullName>
            </value>
            <value>
                <fullName>Not on SAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>