objects/Server_Deployment__c/fields/Seats_Deployed__c.field-meta.xml
<CustomField>
    <fullName>Seats_Deployed__c</fullName>
    <defaultValue>(0)</defaultValue>
    <inlineHelpText>Any time you interact with a customer, note the number of computers registered within the last 30 days as reported from the Console&apos;s &quot;Administration-&gt;System Status&quot; tab and enter that value in this field.</inlineHelpText>
    <label>Seats Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>