objects/Server_Deployment__c/fields/Seats_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Seats_Licensed__c</fullName>
    <description>The number of seats the license should be generated for</description>
    <label>Seats Licensed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>